# sstring

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
doc/: API.md
src/: CMakeLists.txt  i18n.h  sstring.cpp  sstring.h
tests/: CMakeLists.txt  sstring_test.cpp
